# speech3

./: .dockerignore  .env  .gitignore  API_COMPATIBILITY.md  CHANGELOG.md  Dockerfile  Dockerfile.new  README.md  adaptive_pronunciation_batch.py  add_one_speech.py  add_speeches_round7.py  add_speeches_round8.py  advanced_audio_analysis.py  advanced_text_analysis.py  ai_summary.py  analysis1.py  analysis3-json.py  analysis3.py  analysis3_module.py  analyze_missing.py  analyze_oratory_batch.py  argument_analysis.py  audio_analysis.py  audio_quality.py  batch_import.py  batch_import_all.py  batch_import_scheduled.sh  batch_pronunciation_analysis.py  batch_pronunciation_cron.py  build.sh  build_pronunciation_dataset.py  bulk_oratory_import.py  check_compatibility.sh  debug.sh  delivery_quality_model.json  diarization.py  docker-compose.yml  download_100_best.py  download_librivox_orations.py  download_spanish_librivox.py  (+60 more)
api/: audio_routes.py  audio_storage.py  audio_utils.py  audiobooks.py  auth.py  auth_routes.py  care_groups.py  chunk_upload.py  confidence_analysis.py  config.py  content_analysis.py  cross_session_tracking.py  database.py  dementia_analysis.py  document_parser.py  gamification_endpoints.py  integrity.py  interview_endpoints.py  job_manager.py  kids_endpoints.py  main.py  metrics.py  metrics_endpoints.py  models.py  oauth_config.json  oratory_analysis.py  oratory_comprehensive.py  oratory_endpoints.py  pipeline_runner.py  pipeline_stages.py  (+27 more)
sdk/python/: README.md  pyproject.toml
sdk/python/speechscore/: __init__.py  client.py  exceptions.py  models.py
(+812 files in other folders)
