[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speechscore"
version = "0.1.0"
description = "Python SDK for the SpeechScore API — comprehensive speech analysis as a service."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.21",
]

[project.urls]
Documentation = "https://docs.speechscore.dev"
Repository = "https://github.com/jsuppe/speechscore-python"
